fixing label spacing

--- a/src/style.css
+++ b/src/style.css
@@ -340,7 +340,9 @@ label::placeholder {
     color: var(--clr-black);
 }
 
-.form_question.form_textarea label {
+.form_question label,
+.form_question .form_label, 
+fieldset .form_label {
     text-align: left;
     padding-left: 0;
 
@@ -351,10 +353,6 @@ textarea {
     border-radius: 5px;
     border: none;
     padding: 1rem .5rem;
-}
-
-fieldset .form_label {
-    text-align: left;
 }
 
 button.default.form_button_submit, 
